Add requirements.txt for Render deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit
-langchain
-faiss-cpu
 openai
-pymupdf
-langchain-openai
-langchain-community
+python-dotenv
+langchain
+PyMuPDF
+tiktoken
